--- a/vignettes/articles/ExternalAPI.Rmd
+++ b/vignettes/articles/ExternalAPI.Rmd
@@ -5,7 +5,7 @@ subtitle: "C++"
 
 ## Introduction
 
-The Hector external API allows another program to execute one or more Hector runs from within another program. All of the functionality available in the stand-alone version of Hector is available through the API. In fact, stand-alone Hector is implemented as a wrapper around a series of calls to the API. Therefore, a program using the Hector API can do all of the following: 
+The Hector external API allows another program to execute one or more Hector runs within another program. All of the functionality available in the stand-alone version of Hector is available through the API. In fact, stand-alone Hector is implemented as a wrapper around a series of calls to the API. Therefore, a program using the Hector API can do all of the following: 
 * Set up one or more Hector instances and read configuration files.
 * Set emissions values.
 * Run Hector through a specified date, resuming from wherever the model last stopped.
@@ -27,14 +27,14 @@ The Hector API is supported in Hector version 1.1 and later. It is written in C+
 
 ## Installation and Setup
 
-[Innstall and build Hector](BuildHector.html) normally. The build process will produce a library called `libhector.a`. You will need to link this file into your executable when you build your program. If you have a place where you store all of your libraries (e.g., `/usr/local/lib`), you can copy it there, or you can just use it in place if you wish. You will also need to be able to include the Hector header files in your code. They are found in the 'headers' directory under the directory where you installed hector. You could copy that entire directory tree to something like `/usr/include/hector` if you wish, but it's probably just as easy to leave it where it is.
+[Install and build Hector](BuildHector.html) normally. The build process will produce a library called `libhector.a`. You will need to link this file into your executable when you build your program. If you have a place where you store all of your libraries (e.g., `/usr/local/lib`), you can copy it there, or you can just use it in place if you wish. You will also need to be able to include the Hector header files in your code. They are found in the 'headers' directory under the directory where you installed Hector. You could copy that entire directory tree to something like `/usr/include/hector` if you wish, but it's probably just as easy to leave it where it is.
 
 You don't absolutely need any of the other files in the Hector directories, but a few others might be useful as examples. The file `src/main.cpp` is an example of how to use the API to get data in and out of Hector. You can build the example code by uncommenting these lines in the Makefile:
 ```
 # hector-api: libhector.a main-api.o
 # 	$(CXX) $(LDFLAGS) -o hector-api main-api.o -lhector -lgsl -lgslcblas -lm
 ```
-Then run `make hector-api` to build the example. From the top-level hector directory, run `hector-api input/api-example.ini` to run the example code. The example code reads emissions for several gases from the files in the `input/emissions` directory and loads those emissions into the Hector core through the API. Emissions for the remaining gases are set from the input file, as in the stand-alone version of Hector.
+Then run `make hector-api` to build the example. From the top-level Hector directory, run `hector-api input/api-example.ini` to run the example code. The example code reads emissions for several gases from the files in the `input/emissions` directory and loads those emissions into the Hector core through the API. Emissions for the remaining gases are set from the input file, as in the stand-alone version of Hector.
 
 ## Using the API
 
@@ -42,24 +42,24 @@ Hector classes are (with one exception) contained in the `Hector::` namespace. T
 
 * `Hector::Core`  Master controller that mediates interactions between Hector components and with outside code. 
 * `Hector::unitval`  Structure for representing a numerical value with attached units. Values that you send to and receive from Hector will be packaged in this structure. The `unitval` class has an implicit conversion to double defined, which strips off the unit and returns the numerical value. Writing a `unitval` to a `std::ostream` writes both the value and the unit (e.g. `12345 Tg`).
-* `Hector::message_data`  Structure for holding messages for Hector components. A message_data can hold a variety of different message types, but for messages from outside of Hector a message will be either a date (for retrieving data from a component), or a date paired with a `unitval` (for sending data to a component).
+* `Hector::message_data`  Structure for holding messages for Hector components. A `message_data` can hold a variety of different message types, but for messages from outside of Hector, a message will be either a date (for retrieving data from a component), or a date paired with a `unitval` (for sending data to a component).
 * `Hector::Logger`  Hector's logging class. You only need to deal with this if you want to attach loggers to Hector components.
 * `Hector::INIToCoreReader` Helper class used during initialization. 
 * `Hector::CSVOutputStreamVisitor` Class that formats and writes Hector's output. You will only need this if you want Hector to produce its native output. If you are planning on retrieving data from Hector and using your code's output mechanism, you can skip it.
 * `h_exception` Exception class. If something goes wrong Hector will throw this class as an exception.
 
-The Hector Core will be your interface for controlling and interacting with the simulation. To run the simulation you use the Core's run method. To get a component to do something you tell the Hector Core to send the component a message. The type of the message determines what the component will do in response, and the contents of the message provide the input for whatever it is that the component will be doing. The Core routes the message and returns the response, if any. 
+The Hector core will be your interface for controlling and interacting with the simulation. To run the simulation, you use the core's run method. To get a component to do something, you tell the Hector core to send the component a message. The type of the message determines what the component will do in response, and the contents of the message provide the input for whatever it is that the component will be doing. The core routes the message and returns the response, if any. 
 
-A message comprises three parts:
-* A **type** that indicates what you want the component to do. The types you will encounter most frequently are *SETDATA* and *GETDATA*
-* A **target** that indicates what the message is for. Usually this will be the name of a gas or a type of forcing. Valid targets have defined constants that are given in an [[appendix|Hector Message Targets]].
+A message comprises three parts:  
+* A **type** that indicates what you want the component to do. The types you will encounter most frequently are *SETDATA* and *GETDATA*  
+* A **target** that indicates what the message is for. Usually this will be the name of a gas or a type of forcing. Valid targets have defined constants that are given in an [[appendix|Hector Message Targets]].  
 * The **contents** will provide the input for the component's action. This will be a `message_data` object that you have packed with the relevant data.
 
 ### Initialization
 
 The general procedure for initialization is:
 
-1. Create an instance of `Hector::core`.
+1. Create an instance of `Hector::Core`.
 2. Initialize the core.
 2. Read and parse the configuration (INI) file.
 3. *(Optionally)* Attach an output stream visitor to Hector.
@@ -91,7 +91,7 @@ hcore.prepareToRun();         // prepare Hector to run
 
 ### Setting Emissions
 
-To set emissions for a gas, send a *SETDATA* message targeted at the gas you want to set emissions for. You don't have to know which component handles the gas; the Core takes care of looking that up. The message contents will be a date (the year you are setting emissions for) and a `unitval` (the emissions value). Hector checks the units on the data passed in, but it doesn't convert on the fly. [Units for the gases tracked by Hector](units.html) are given in a separate appendix.
+To set emissions for a gas, send a *SETDATA* message targeted at the gas you want to set emissions for. You don't have to know which component handles the gas; the core takes care of looking that up. The message contents will be a date (the year you are setting emissions for) and a `unitval` (the emissions value). Hector checks the units on the data passed in, but it doesn't convert on the fly. [Units for the gases tracked by Hector](units.html) are given in a separate appendix.
 
 The entire process looks like this:
 ```C++
@@ -138,7 +138,7 @@ Hector::unitval rftot = hcore.sendMessage(M_GETDATA, D_RF_TOTAL);
 ```
 There is a bit of inconsistency about the use of dates in these calls. Generally, the date is forbidden for forcings, except for halocarbon forcings, where it is required. Dates are forbidden for CO$_2$ concentrations, but required for other gases. We hope to address these inconsistencies in subsequent updates. Note that for outputs that do not allow a date to be supplied, the only way to get a value of the output for a particular date is to stop the run at that date and call `sendMessage()` to get the value for the current model time.
 
-The return value is a `unitval` structure. These can be manipulated directly, or if they are assigned to a double, the units will be stripped off leaving only the value:
+The return value is a `unitval` structure. These can be manipulated directly, or if they are assigned to a double, the units will be stripped off, leaving only the value:
 ```C++
 double globaltemp = hcore.sendMessage(M_GETDATA, D_GLOBAL_TEMP);
 double ocean_c_flux = hcore.sendMessage(M_GETDATA, D_OCEAN_CFLUX);
@@ -149,7 +149,7 @@ To stop the core and delete all Hector components, call the `shutdown()` method:
 ```C++
 hcore.shutdown();
 ```
-Once this method is called, all further calls to methods on the Hector core will fail. If you have instantiated more than one Hector Core, then only the core on which `shutdown()` is called will be affected. Others will continue to operate normally.
+Once this method is called, all further calls to methods on the Hector core will fail. If you have instantiated more than one Hector core, then only the core on which `shutdown()` is called will be affected. Others will continue to operate normally.
 
 ### Exceptions
 If Hector encounters an unrecoverable error, it will throw an exception with `h_exception` as the exception argument. This object can be passed to an `ostream` to print the function, file, and line number where the problem was detected, along with a (hopefully) descriptive message.
@@ -164,12 +164,12 @@ catch(const h_exception &e) {
 ```
 
 ## Building and Running Your Code
-There are two things you have to do to build a model linked with Hector. The first is to make sure that the compiler can find the `hector.hpp` include file and all of the header files included from it. You do this by adding the Hector headers directory to your compiler's include path. For example, if you installed Hector in /usr/src/hector, then your compile command might look something like this:
+There are two things you have to do to build a model linked with Hector. The first is to make sure that the compiler can find the `hector.hpp` include file and all of the header files included from it. You do this by adding the Hector headers directory to your compiler's include path. For example, if you installed Hector in `/usr/src/hector`, then your compile command might look something like this:
 ```
 g++ -I/usr/src/hector/headers -O -c mycode.cpp
 ```
 
-The second thing you have to do is to link the object files and the Hector library, `libhector.a`. You will also need to link in the GNU Scientific Library (GSL). Similar to the compiling step, you have to set the library search path. You also have to add the `-l` options of each of the needed libraries. For example, with Hector in /usr/src/hector and the GSL libraries in /usr/local/lib, the link command looks like this:
+The second thing you have to do is to link the object files and the Hector library, `libhector.a`. You will also need to link in the GNU Scientific Library (GSL). Similar to the compiling step, you have to set the library search path. You also have to add the `-l` options of each of the needed libraries. For example, with Hector in `/usr/src/hector` and the GSL libraries in `/usr/local/lib`, the link command looks like this:
 ```
 g++ -L/usr/src/hector/source -L/usr/local/lib mycode.o -lhector -lgsl -lgslcblas -lm
 ```
