--- a/vignettes/articles/carbon_tracking.Rmd
+++ b/vignettes/articles/carbon_tracking.Rmd
@@ -34,7 +34,7 @@ library(ggplot2)
 
 ## Carbon tracking
 
-Now, we will read in an .ini file and create a new core. In this example, we 
+Now, we will read in an INI file and create a new core. In this example, we 
 will use SSP245.
 
 In order to use the carbon tracking feature, we must use `setvar` and `fetchvars`. ^[Command line users: to set a tracking start date, change the `trackingDate=9999` line in the `[core]` section of an INI scenario file.]
@@ -65,7 +65,7 @@ run(core)
 ```
 
 At this point, the model has been run. To retrieve the carbon tracking data, we
-use the command `get_tracking_data()`. This returns a data frame which gives the 
+use the `get_tracking_data()` function. This returns a data frame which gives the 
 current state of the pool, and fractions of where the carbon is sourced from, at
 each model time point after `trackingDate`.
 
@@ -138,8 +138,9 @@ tracking_results <- function(inifile, start, stop, tracking, scenarioName) {
   
   # Get results, filter by correct years, add columns containing the amount of carbon by source and the given scenario name
   results <- get_tracking_data(core)
-  results <- subset(results, year >= start)
-  results <- subset(results, year <= stop)
+  results <- subset(results, 
+                    results$year >= start &
+                      results$year <= stop)
   results$source_amount <- results$source_fraction * results$pool_value
   results$scenario_name <- scenarioName
   
@@ -148,22 +149,20 @@ tracking_results <- function(inifile, start, stop, tracking, scenarioName) {
 
 AF_calc <- function(start, results, stop) {
   
-  # Isolate the atmos_c pool and earth_c source in start/end years  
-  atm_c <- subset(results, results$pool_name == "atmos_c")
-  atm_c <- subset(atm_c, atm_c$source_name == "earth_c")
-  
-  atm_c1 <- subset(atm_c, year == start)
-  atm_c2 <- subset(atm_c, year == stop)
-  atm_c <- rbind(atm_c1, atm_c2)
+  # Isolate the atmos_c pool and earth_c source in start/end years
+  atm_c <- subset(results, 
+                  results$pool_name == "atmos_c" &
+                    results$source_name == "earth_c" &
+                    results$year %in% c(start, stop))
   
   # Calculate atmospheric uptake of Earth carbon
   atm_c <- tail(atm_c$source_amount, n = 1) - head(atm_c$source_amount, n = 1)
+  
   # Isolate earth_c pool and source in start/end years
-  earth_c_loss <- subset(results, results$pool_name == "earth_c")
-  earth_c_loss <- subset(earth_c_loss, earth_c_loss$source_name == "earth_c")
-  e_c1 <- subset(earth_c_loss, year == start)
-  e_c2 <- subset(earth_c_loss, year == stop)
-  earth_c_loss <- rbind(e_c1, e_c2)
+  earth_c_loss <- subset(results, 
+                         results$pool_name == "earth_c" &
+                           results$source_name == "earth_c" &
+                           results$year %in% c(start, stop))
   
   # Calculate change in Earth carbon
   earth_c_loss <- head(earth_c_loss$source_amount, n = 1) - tail(earth_c_loss$source_amount, n = 1)
@@ -189,7 +188,7 @@ tail(airborne_frac, n = 1)
 
 ```
 
-We see that the airborne fraction in 2020 is about 41%, so 41% of anthropogenic emissions remain in the atmosphere. 
+We see that the airborne fraction in 2020 is about `r round(as.numeric(airborne_frac[8,2]) * 100, 0)`%. In other words, `r round(as.numeric(airborne_frac[8,2]) * 100, 0)`% of anthropogenic emissions remain in the atmosphere. 
 
 We can compare these values to a study published by W. Knorr in 2009.^[Knorr, W. "Is the airborne fraction of anthropogenic CO$_2$ emissions increasing?" Geophysical Research Letters 36 (21). November 7, 2009. http://dx.doi.org/10.1029/2009GL040613] Knorr computes seven values of airborne fractions in 2000 which we can average. We can compute the difference between the maximum value and the minimum to give an error range.
 
