--- a/vignettes/articles/InputFiles.Rmd
+++ b/vignettes/articles/InputFiles.Rmd
@@ -22,31 +22,28 @@ Here, comments start with a semicolon (`;`); *section names* (`core`) are enclos
 
 Properties with asterisks (`*`) are optional.
 
+``` {r table, echo = FALSE, warning = FALSE}
+library(knitr)
+library(kableExtra)
 
-| Section (component)      | Property         | Units     | Notes                                                      |
-| ------------------------ | ---------------- | --------- | -----------                                                |
-| **core**                 | `run_name`       | Text      |                                                            |
-|                          | `startDate`      | Year      |                                                            |
-|                          | `endDate`        | Year      |                                                            |
-|                          | `do_spinup*`     | 0/1       | Defaults to 1 (TRUE)                                       |
-|                          | `max_spinup*`    | Numeric   | Defaults to 1000                                           |
-| **carbon-cycle-solver**  | `eps_abs`        | Numeric   | Solution tolerance, Pg C; see [GSL documentation][gsl-ode] |
-|                          | `eps_rel`        | Numeric   | Solution tolerance; see [GSL documentation][gsl-ode]       |
-|                          | `dt`             | Numeric   | Default timestep; see GSL documentation                    |
-|                          | `eps_spinup`     | Numeric   | Spinup tolerance (drift), Pg C                             |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
+input <- read.csv("input_params.csv")
+colnames(input) <- c("Section", "Parameter", "Biome specific", "Time variant",
+                     "Required", "Default", "Units", "Description")
 
+params <- subset(input, input$`Time variant` == "n")
+v_params <- subset(input, input$`Time variant` == "y")
+
+rownames(params) = NULL
+rownames(v_params) = NULL
+
+kbl(params) %>%
+    kable_styling(fixed_thead = T, 
+                  bootstrap_options = "hover") %>%
+      scroll_box(height = "400px")
+
+
+```
+  
 
 There are two Hector-specific wrinkles to the INI property-value assignment scheme. First, some properties have a time index that's required when assigning:
 
@@ -65,19 +62,13 @@ In this case, the `input/emissions/ssp245_emissions.csv` file is parsed and the 
 
 **Table of variable inputs (with a time index)**
 
-| Section (component)      | Property         | Units     | Notes                                                      |
-| ------------------------ | ---------------- | --------- | -----------                                                |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
-|                          |                  |           |                                                            |
+``` {r timetable, echo = FALSE}
+kbl(v_params) %>%
+    kable_styling(fixed_thead = T, 
+                  bootstrap_options = "hover") %>%
+      scroll_box(height = "400px")
 
-[gsl-ode]: https://www.gnu.org/software/gsl/manual/html_node/Ordinary-Differential-Equations.html#Ordinary-Differential-Equations
+```
+  
+[gsl-ode]: https://www.gnu.org/software/gsl/manual/html_node/Ordinary-Differential-Equations.html#Ordinary-Differential-Equations   
 
