add comments, roxygen documentation, and modify Rmd

--- a/vignettes/articles/InputFiles.Rmd
+++ b/vignettes/articles/InputFiles.Rmd
@@ -24,8 +24,7 @@ Here, comments start with a semicolon (`;`); *section names* (`core`) are enclos
 library(knitr)
 library(kableExtra)
 
-csv_path <- system.file("data-raw/input_params.csv", package = "hector")
-input <- read.csv(csv_path)
+input <- hector:::input_csv
 colnames(input) <- c("Section", "Parameter", "Biome specific", "Time variant",
                      "Required", "Default", "Units", "Description")
 
