--- a/vignettes/articles/InputFiles.Rmd
+++ b/vignettes/articles/InputFiles.Rmd
@@ -24,7 +24,8 @@ Here, comments start with a semicolon (`;`); *section names* (`core`) are enclos
 library(knitr)
 library(kableExtra)
 
-input <- hector:::input_csv
+csv_path <- system.file("data-raw/input_params.csv", package = "hector")
+input <- read.csv(csv_path)
 colnames(input) <- c("Section", "Parameter", "Biome specific", "Time variant",
                      "Required", "Default", "Units", "Description")
 
